#1335 Helium com a backoffice de Distribucio
- Control de permisos
- Llistat anotacions pendents
- Detall d'anotacions
- Rebutjar anotacions
- Acceptar anotacions
- Pipella d'anotacions
- Monitor d'integracions
- Integració llibreria backoffice/Arxiu
- Descàrrega d'annexos i informació de firmes

Tasc url: https://github.com/GovernIB/helium/issues/1335

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -349,10 +349,10 @@ expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
 expedient.info.pipella.interessats=Interessats
 expedient.info.pipella.terminis=Terminis
-expedient.info.pipella.notificacions=Notif.Telem.
 expedient.info.pipella.notificacions=Notificacions
 expedient.info.pipella.registre=Registre
 expedient.info.pipella.cronograma=Cronograma
+expedient.info.pipella.anotacions=Anotacions
 expedient.info.confirm.dada.esborrar=Estau segur que voleu esborrar aquesta dada de l'expedient?
 expedient.info.permis.no=No disposa de permís per a modificar l'expedient
 expedient.info.token.activat=El token s'ha activat correctament
@@ -519,6 +519,12 @@ expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
 expedient.tasca.segon.pla.bloquejada=Aquesta tasca està pendent de finalització en segon pla.
 expedient.tasca.segon.pla.finalitzada=No es troba la tasca o ja s'ha finalitzat.
+
+expedient.anotacio.llistat.columna.numero=Número
+expedient.anotacio.llistat.columna.data=Data
+expedient.anotacio.llistat.columna.extracte=Extracte
+expedient.anotacio.llistat.columna.estat=Estat
+expedient.anotacio.llistat.columna.dataProcessament=Processada
 
 expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
@@ -1220,7 +1226,8 @@ expedient.tipus.integracio.distribucio.controller.guardat=Els canvis s'han guard
 expedient.tipus.integracio.distribucio.validacio = Errors de validació
 expedient.tipus.integracio.distribucio.activar=Activar
 expedient.tipus.integracio.distribucio.codiProcediment=Codi procediment
-expedient.tipus.integracio.distribucio.validacio.codiProcediment.repetit=Ja existeix el tipus d''expedient "{0} - {1}" a l''entorn "{2} - {3}" actiu pel codi de procediment "{4}"
+expedient.tipus.integracio.distribucio.validacio.codiProcediment.repetit=Ja existeix el tipus d''expedient "{0} - {1}" a l''entorn "{2} - {3}" actiu per la combinació [codi procediment="{4}", codi assumpte="{5}"]
+expedient.tipus.integracio.distribucio.codiAssumpte=Codi assumpte
 
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
@@ -1673,11 +1680,252 @@ monitor.integracio.columna.temps.resposta=Temps de resposta
 monitor.integracio.info.parametres=Paràmetres de la petició
 
 # Anotacions provinents de Distribucio
-anotacio.llistat.titol=Consulta d'anotacions
-anotacio.llistat.filtre.camp.extracte=Extracte
-anotacio.llistat.columna.extracte=Extracte
-anotacio.llistat.accio.consultar=Gestionar
+anotacio.llistat.titol=Consulta d'anotacions de Distribució
 
+anotacio.llistat.filtre.camp.codiProcediment=Codi Procediment
+anotacio.llistat.filtre.camp.codiAssumpte=Codi Assumpte
+anotacio.llistat.filtre.camp.numeroExpedient=Número Expedient
+anotacio.llistat.filtre.camp.numero=Número registre
+anotacio.llistat.filtre.camp.extracte=Extracte
+anotacio.llistat.filtre.camp.dataInicial=Data inicial
+anotacio.llistat.filtre.camp.dataFinal=Data final
+anotacio.llistat.filtre.camp.expedientTipus=Expedient tipus
+anotacio.llistat.filtre.camp.estat=Estat
+
+anotacio.llistat.columna.data=Data
+anotacio.llistat.columna.identificador=Número registre
+anotacio.llistat.columna.extracte=Extracte
+anotacio.llistat.columna.procedimentCodi=Codi Procediment
+anotacio.llistat.columna.assumpteCodiCodi=Codi Assumpte
+anotacio.llistat.columna.expedientNumero=Número expedient
+anotacio.llistat.columna.expedientTipus=Tipus d'expedient
+anotacio.llistat.columna.expedient=Expedient
+anotacio.llistat.columna.dataRecepcio=Rebuda
+anotacio.llistat.columna.estat=Estat
+anotacio.llistat.columna.dataProcessament=Processada
+anotacio.llistat.columna.expedientTipus=Expedient Tipus
+anotacio.llistat.columna.expedient=Expedient
+
+anotacio.llistat.accio.consultar=Gestionar
+anotacio.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta petició petició d'anotació? Aquesta acció no es pot tornar enrera una vegada executada.
+anotacio.llistat.accio.esborrar.validacio.pendent=Només es poden esborrar anotacions pendents
+anotacio.llistat.accio.esborrar.success=La petició d''anotació de registre "{0}" ha estat esborrada correctament
+anotacio.llistat.accio.esborrar.error=Error esborrant l''anotació amb id {0}: {1}
+
+anotacio.detalls.titol
+anotacio.detalls.titol=Detalls de l'anotació de registre
+anotacio.detalls.pipella.informacio=Informació
+anotacio.detalls.pipella.interessats=Interessats
+anotacio.detalls.pipella.annexos=Annexos
+anotacio.detalls.pipella.proces=Processament automàtic
+anotacio.detalls.pipella.error=Error
+anotacio.detalls.titol.obligatories=Dades obligatòries
+anotacio.detalls.titol.opcionals=Dades opcionals
+anotacio.detalls.titol.seguiment=Dades de seguiment
+anotacio.detalls.titol.justificant=Justificant
+anotacio.detalls.camp.tipus=Tipus
+anotacio.detalls.entrada=Entrada
+anotacio.detalls.camp.numero=Número
+anotacio.detalls.camp.data=Data
+anotacio.detalls.camp.entitat=Entitat
+anotacio.detalls.camp.oficina=Oficina
+anotacio.detalls.camp.llibre=Llibre
+anotacio.detalls.camp.usuari=Usuari
+anotacio.detalls.camp.aplicacio=Aplicació
+anotacio.detalls.camp.expedient=Expedient
+anotacio.detalls.camp.ripea.alta=Data d'alta a RIPEA
+anotacio.detalls.camp.extracte=Extracte
+anotacio.detalls.camp.docfis=Documentació física
+anotacio.detalls.camp.origen=Òrgan origen
+anotacio.detalls.camp.desti=Òrgan destí
+anotacio.detalls.camp.procediment.codi=Codi procediment
+anotacio.detalls.camp.assumpte.tipus=Tipus d'assumpte
+anotacio.detalls.camp.idioma=Idioma
+anotacio.detalls.camp.assumpte.codi=Codi assumpte
+anotacio.detalls.camp.refext=Ref. externa
+anotacio.detalls.camp.numexp=Núm. expedient
+anotacio.detalls.camp.transport.tipus=Transport
+anotacio.detalls.camp.transport.numero=Transp. núm.
+anotacio.detalls.camp.transport.num=Transp. núm.
+anotacio.detalls.camp.observacions=Observacions
+anotacio.detalls.camp.origen.oficina=Orígen oficina
+anotacio.detalls.camp.origen.num=Origen núm.
+anotacio.detalls.camp.origen.data=Origen data
+anotacio.detalls.camp.interessat.tipus=Tipus
+anotacio.detalls.camp.interessat.document=Document
+anotacio.detalls.camp.interessat.nom=Nom
+anotacio.detalls.camp.proces.estat=Estat
+anotacio.detalls.camp.proces.data=Data darrer intent
+anotacio.detalls.camp.proces.intents=Núm intents
+anotacio.detalls.camp.proces.error=Error
+anotacio.detalls.info.errors=El processament automàtic d'aquesta anotació ha produit errors
+anotacio.detalls.accio.reintentar=Reintentar processament
+
+anotacio.detalls.errorNotifacio=Error al notificar distribucio del processament correcte
+anotacio.detalls.annex.accio.reintentar
+
+
+anotacio.interessat.detalls.camp.emailHabilitat=Correu electrònic habilitat
+anotacio.interessat.detalls.camp.canalPreferent=Canal preferent
+anotacio.interessat.detalls.camp.representant=Representant
+anotacio.interessat.detalls.camp.canalPreferent.POSTAL=Enviament postal
+anotacio.interessat.detalls.camp.canalPreferent.ADRECA_ELEC_HAB=Adreça electrònica habilitada
+anotacio.interessat.detalls.camp.canalPreferent.COMPAREIXENCA_ELEC=Compareixença electrònica
+anotacio.interessat.buit=Aquesta anotació no té interessats
+
+anotacio.interessat.detalls.camp.tipus=Tipus d'interessat
+anotacio.interessat.detalls.camp.document.tipus=Tipus de document
+anotacio.interessat.detalls.camp.document.numero=Número de document
+anotacio.interessat.detalls.camp.nom=Nom
+anotacio.interessat.detalls.camp.llinatge1=Llinatge1
+anotacio.interessat.detalls.camp.llinatge2=Llinatge2
+anotacio.interessat.detalls.camp.raoSocial=Raó social
+anotacio.interessat.detalls.camp.organCodi=Administració
+anotacio.interessat.detalls.camp.pais=País
+anotacio.interessat.detalls.camp.provincia=Provincia
+anotacio.interessat.detalls.camp.municipi=Municipi
+anotacio.interessat.detalls.camp.adresa=Adreça
+anotacio.interessat.detalls.camp.codiPostal=Codi postal
+anotacio.interessat.detalls.camp.codiDire=Codi DIRe
+anotacio.interessat.detalls.camp.email=Correu electrònic
+anotacio.interessat.detalls.camp.telefon=Telèfon
+anotacio.interessat.detalls.camp.observacions=Observacions
+anotacio.interessat.detalls.camp.idioma=Idioma preferent 
+anotacio.interessat.detalls.camp.autoritzat=Autoritza notificacions en format electrònic
+anotacio.interessat.detalls.camp.identificador=Identificador
+
+anotacio.annex.detalls.camp.eni.data.captura=Data de captura (ENI)
+anotacio.annex.detalls.camp.eni.origen=Origen (ENI)
+anotacio.annex.detalls.camp.eni.estat.elaboracio=Estat d'elaboració (ENI)
+anotacio.annex.detalls.camp.eni.tipus.documental=Tipus documental (ENI)
+anotacio.annex.detalls.camp.sicres.tipus.document=Tipus de document annexat
+anotacio.annex.detalls.camp.localitzacio=Localitzacio
+anotacio.annex.detalls.camp.observacions=Observacions
+anotacio.annex.detalls.camp.firma=Firma
+anotacio.annex.detalls.camp.firmes=Firmes
+anotacio.annex.detalls.camp.firma.autoFirma=Firmat per RIPEA
+anotacio.annex.detalls.camp.firma.autoFirma.info=RIPEA ha afegit automaticament aquesta firma a l'annex de l'anotació de registre per desar-lo com a definitiu a l'arxiu
+anotacio.annex.detalls.camp.firmaMode=Mode firma
+anotacio.annex.detalls.camp.firmaCsv=Firma CSV
+anotacio.annex.detalls.camp.validacioOCSP=Validació OCSP
+anotacio.annex.detalls.camp.firmaFitxerNom=Firma
+anotacio.annex.detalls.camp.firmaTipus=Tipus firma
+anotacio.annex.detalls.camp.firmaPerfil=Perfil firma
+anotacio.annex.detalls.camp.firmaCsvRegulacio=CSV regulació
+anotacio.annex.detalls.camp.firmaContingut=Fitxer firma
+anotacio.annex.detalls.camp.firmaDetalls=Detalls dels firmants
+anotacio.annex.detalls.camp.firmaDetalls.data=Data
+anotacio.annex.detalls.camp.firmaDetalls.data.nd=N/D
+anotacio.annex.detalls.camp.firmaDetalls.nif=NIF
+anotacio.annex.detalls.camp.firmaDetalls.nom=Nom
+anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
+anotacio.annex.detalls.camp.fitxer=Fitxer
+anotacio.annex.detalls.camp.fitxer.descarregar=Descarregar fitxer
+anotacio.annex.detalls.camp.estat=Estat
+anotacio.annex.detalls.camp.ntiTipusDocument.RESOLUCIO=Resolució
+anotacio.annex.detalls.camp.ntiTipusDocument.ACORD=Acord
+anotacio.annex.detalls.camp.ntiTipusDocument.CONTRACTE=Contracte
+anotacio.annex.detalls.camp.ntiTipusDocument.CONVENI=Conveni
+anotacio.annex.detalls.camp.ntiTipusDocument.DECLARACIO=Declaració
+anotacio.annex.detalls.camp.ntiTipusDocument.COMUNICACIO=Comunicació
+anotacio.annex.detalls.camp.ntiTipusDocument.NOTIFICACIO=Notificació
+anotacio.annex.detalls.camp.ntiTipusDocument.PUBLICACIO=Publicació
+anotacio.annex.detalls.camp.ntiTipusDocument.JUSTIFICANT_RECEPCIO=Justificant de recepció
+anotacio.annex.detalls.camp.ntiTipusDocument.ACUS_REBUT=Justificant de recepció
+anotacio.annex.detalls.camp.ntiTipusDocument.ACTE=Acta
+anotacio.annex.detalls.camp.ntiTipusDocument.ACTA=Acta
+anotacio.annex.detalls.camp.ntiTipusDocument.CERTIFICAT=Certificat
+anotacio.annex.detalls.camp.ntiTipusDocument.DILIGENCIA=Diligència
+anotacio.annex.detalls.camp.ntiTipusDocument.INFORME=Informe
+anotacio.annex.detalls.camp.ntiTipusDocument.SOLICITUD=Sol·licitud
+anotacio.annex.detalls.camp.ntiTipusDocument.DENUNCIA=Denúncia
+anotacio.annex.detalls.camp.ntiTipusDocument.ALEGACIONS=Alegació
+anotacio.annex.detalls.camp.ntiTipusDocument.ALEGACIO=Alegació
+anotacio.annex.detalls.camp.ntiTipusDocument.RECURSOS=Recursos
+anotacio.annex.detalls.camp.ntiTipusDocument.RECURS=Recurs
+anotacio.annex.detalls.camp.ntiTipusDocument.COMUNICACIO_CIUTADA=Comunicació ciutadà
+anotacio.annex.detalls.camp.ntiTipusDocument.FACTURA=Factura
+anotacio.annex.detalls.camp.ntiTipusDocument.ALTRES_INCAUTATS=Altres confiscats
+anotacio.annex.detalls.camp.ntiTipusDocument.ALTRES=Altres tipus de documents
+anotacio.annex.detalls.camp.sicresTipusDocument.FORMULARI=Formulari
+anotacio.annex.detalls.camp.sicresTipusDocument.ADJUNT=Document adjunt al formulari
+anotacio.annex.detalls.camp.sicresTipusDocument.TECNIC_INTERN=Fitxern tècnic intern
+
+anotacio.annex.detalls.camp.sicresTipusDocument.01=Formulari
+anotacio.annex.detalls.camp.sicresTipusDocument.02=Document adjunt al formulari
+anotacio.annex.detalls.camp.sicresTipusDocument.03=Fitxern tècnic intern
+anotacio.annex.detalls.camp.sicresTipusDocument.04=Document
+
+anotacio.annex.detalls.camp.ntiElaboracioEstat.ORIGINAL=Original
+anotacio.annex.detalls.camp.ntiElaboracioEstat.COPIA_ELECT_AUTENTICA_CANVI_FORMAT=Còpia electrònica autèntica amb canvi de format
+anotacio.annex.detalls.camp.ntiElaboracioEstat.COPIA_ELECT_AUTENTICA_PAPER=Còpia electrònica autèntica de document paper
+anotacio.annex.detalls.camp.ntiElaboracioEstat.COPIA_ELECT_AUTENTICA_PARCIAL=Còpia electrònica parcial autèntica
+anotacio.annex.detalls.camp.ntiElaboracioEstat.ALTRES=Altres
+anotacio.annex.buit=Aquesta anotació no té cap document annex
+
+anotacio.annex.detalls.camp.firma=Firma
+anotacio.annex.detalls.camp.firma.autoFirma=Firmat per RIPEA
+anotacio.annex.detalls.camp.firma.autoFirma.info=RIPEA ha afegit automaticament aquesta firma a l'annex de l'anotació de registre per desar-lo com a definitiu a l'arxiu
+anotacio.annex.detalls.camp.firmaMode=Mode firma
+anotacio.annex.detalls.camp.firmaCsv=Firma CSV
+anotacio.annex.detalls.camp.validacioOCSP=Validació OCSP
+anotacio.annex.detalls.camp.firmaFitxerNom=Firma
+anotacio.annex.detalls.camp.firmaTipus=Tipus firma
+anotacio.annex.detalls.camp.firmaPerfil=Perfil firma
+anotacio.annex.detalls.camp.firmaCsvRegulacio=CSV regulació
+anotacio.annex.detalls.camp.firmaContingut=Fitxer firma
+anotacio.annex.detalls.camp.firmaDetalls=Detalls dels firmants
+anotacio.annex.detalls.camp.firmaDetalls.data=Data
+anotacio.annex.detalls.camp.firmaDetalls.data.nd=N/D
+anotacio.annex.detalls.camp.firmaDetalls.nif=NIF
+anotacio.annex.detalls.camp.firmaDetalls.nom=Nom
+anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
+
+
+anotacio.interessat.tipus.enum.PERSONA_FISICA=Persona física
+anotacio.interessat.tipus.enum.PERSONA_JURIDICA=Persona jurídica
+anotacio.interessat.tipus.enum.ADMINISTRACIO=Administració
+
+anotacio.form.acceptar.titol=Acceptar la petició d''anotació de registre "{0}"
+anotacio.form.acceptar.informacio.legend=Informació de l'anotació
+anotacio.form.acceptar.camp.accio=Acció
+anotacio.form.acceptar.camp.expedientTipus=Expedient tipus
+anotacio.form.acceptar.camp.expedientTipus.info=Llistat de tipus d'expedient amb permís de consulta per l'usuari i actius per Distribucio
+anotacio.form.acceptar.camp.expedient=Expedient
+anotacio.form.acceptar.camp.titol=Expedient títol
+anotacio.form.acceptar.camp.associarInteressats=Associar interessats a expedient?
+anotacio.form.acceptar.camp.associarDocuments=Associar documents a expedient?
+anotacio.form.acceptar.camp.any=Any
+anotacio.form.acceptar.camp.numero=Número
+anotacio.form.acceptar.crear.info=Quan es creï l'expedient s'associarà la petició d'anotació de registre
+anotacio.form.acceptar.guardar.info=L'opció de guardar desa l'assignació del tipus d'expedient i l'expedient que esculli sense processar l'anotació
+anotacio.form.acceptar.error.jquery.ajax=Error fent la petició AJAX al servidor
+
+anotacio.form.acceptar.noaccio=No s'ha seleccionat cap acció per realitzar.
+anotacio.form.acceptar.guardar.success=S''han guardat correctament les dades per l''anotació "{1}"
+anotacio.form.acceptar.crear.success=S''ha creat correctament l''expedient "{0}" per l''anotació "{1}"
+anotacio.form.acceptar.incorporar.success=L''anotació "{0}" s''ha incorporat correctament a l''epedient "{1}"
+anotacio.form.acceptar.error=S''ha produït un error durant l''acció: "{0}" - {1}
+
+anotacio.acceptar.validacio=Errors de validació durant el processament de l'anotació
+anotacio.acceptar.validacio.demana.titol=Aquest tipus d'expedient demana títol
+anotacio.acceptar.validacio.demana.numero=Aquest tipus d'expedient demana número
+
+anotacio.form.rebutjar.titol=Rebutjar la petició d''anotació de registre "{0}"
+anotacio.form.rebutjar.camp.observacions=Motiu
+anotacio.form.rebutjar.accio.rebutjar=Rebutjar
+anotacio.form.rebutjar.accio.rebutjar.success=Anotació rebutjada correctament
+anotacio.form.rebutjar.accio.rebutjar.error=Hi ha hagut un error rebutjant l''anotació: {0}
+
+
+
+enum.anotacio.estat.PENDENT=Pendent
+enum.anotacio.estat.PROCESSADA=Processada
+enum.anotacio.estat.REBUTJADA=Rebutjada
+
+enum.anotacio.accio.GUARDAR=Guardar
+enum.anotacio.accio.CREAR=Crear
+enum.anotacio.accio.INCORPORAR=Incorporar
 
 enum.tasca.etiqueta.grup=Tasca de grup
 enum.tasca.etiqueta.CA=Cancel·lada
@@ -1717,10 +1965,14 @@ comu.boto.tornar=Tornar
 comu.boto.importar.dades=Importar dades
 comu.boto.exportar.dades=Exportar dades
 comu.boto.descarregar=Descarregar
+comu.boto.processar=Processar
 comu.tots=Tots
 comu.totes=Totes
 comu.arxiu=Arxiu
 comu.processant=Processant
+comu.boto.detalls=Detalls
+comu.boto.acceptar=Acceptar
+comu.boto.rebutjar=Rebutjar
 
 comu.true=Sí
 comu.false=No
