--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1468,11 +1468,11 @@ definicio.proces.desplegar.validacio.error.lectura=Error llegint l'arxiu a impor
 definicio.proces.desplegar.validacio.permisos=No te permisos per realitzar aquesta acció
 
 tasca.llistat.titol=Consulta de tasques
-tasca.llistat.filtre.camp.titol=Títol
+tasca.llistat.filtre.camp.titol=Tasca
 tasca.llistat.filtre.camp.expedient=Expedient
 tasca.llistat.filtre.camp.prioritat=Prioritat
 tasca.llistat.filtre.camp.tipexp=Tipus d'expedient
-tasca.llistat.filtre.camp.tasca=Tasca
+tasca.llistat.filtre.camp.tasca=Tipus de tasca
 tasca.llistat.filtre.camp.datcre=Interval dates de creació
 tasca.llistat.filtre.camp.datcre.ini=Data creació inicial
 tasca.llistat.filtre.camp.datcre.fin=Data creació final
@@ -1509,6 +1509,10 @@ tasca.llistat.reassignacions.programacio=Programació
 tasca.llistat.agafar.seleccionats=Agafar seleccionades
 tasca.llistat.agafar.seleccionats.success=S''han agafat correctament {0} de les {1} tasques seleccionades
 tasca.llistat.agafar.seleccionats.error=No s''ha pogut agafar la tasca "{0}" de l''expedient "{1}"
+tasca.llistat.alliberar.seleccionats=Alliberar seleccionades
+tasca.llistat.alliberar.seleccionats.success=S''han alliberat correctament {0} de les {1} tasques seleccionades
+tasca.llistat.alliberar.seleccionats.error=No s''ha pogut alliberar la tasca "{0}" de l''expedient "{1}"
+tasca.llistat.accio.massiva.no.seleccio=No hi ha cap tasca seleccionada
 
 tasca.tramitacio.pipella.form=Dades
 tasca.tramitacio.pipella.document=Documents
