#1347: Revisar integració Helium - Notib
Task-Url: https://github.com/GovernIB/helium/issues/1347

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -70,6 +70,7 @@ interessat.llistat.columna.email=Email
 interessat.llistat.columna.telefon=Telefon
 interessat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest interessat?
 
+
 interessat.controller.creat=L'interessat s'ha creat correctament
 interessat.controller.modificat=L'interessat s'ha modificat correctament
 interessat.controller.esborrat=L'interessat s'ha esborrat correctament
@@ -80,6 +81,7 @@ interessat.form.titol.nou=Crear interessat
 interessat.form.titol.modificar=Modificar interessat
 
 interessat.form.camp.codi=Codi
+interessat.form.camp.codipostal=Codi postal
 interessat.form.camp.nom=Nom
 interessat.form.camp.nif=Nif
 interessat.form.camp.llinatge1=Llinatge1
@@ -89,9 +91,27 @@ interessat.form.camp.email=Email
 interessat.form.camp.telefon=Telefon
 interessat.form.camp.tipus=Tipus d'interessat
 
+interessat.form.camp.entregatipus=Tipus entrega postal
+interessat.form.camp.linia1=Línia 1
+interessat.form.camp.linia2=Línia 2
+interessat.form.camp.entregaPostal=Entrega postal
+interessat.form.camp.entregadeh=Entrega a la Direcció Electrònica Hablitada (DEH)
+interessat.form.camp.entregadehobligat=Obligat
+
+interessat.form.valid.email=Aquest camp és obligatori si està habilitada l''entrega a la Direcció Electrònica Hablitada (DEH)
+interessat.form.valid.linia=Aquest camp és obligatori si està habilitada l''entrega postal
 interessat.tipus.enum.ADMINISTRACIO=Administració
 interessat.tipus.enum.FISICA=Fisica
 interessat.tipus.enum.JURIDICA=Juridica
+
+interessat.tipus.enum.ADMINISTRACIO=Administració
+interessat.tipus.enum.FISICA=Fisica
+interessat.tipus.enum.JURIDICA=Juridica
+
+domiciliconcret.tipus.enum.NACIONAL=Nacional
+domiciliconcret.tipus.enum.ESTRANGER=Estranger
+domiciliconcret.tipus.enum.APARTAT_CORREUS=Apartat correus
+domiciliconcret.tipus.enum.SENSE_NORMALITZAR=Sense normalitzar
 
 interessat.validacio.codi.repetit=Aquest codi ja existeix
 interessat.validacio.llinatge.obligatori=Si el tipus de persona és física llavors el llinatge es obligatori
@@ -226,6 +246,10 @@ expedient.document.form.camp.firma=Arxiu amb la firma
 expedient.document.notificar.form.camp.interessats.variable=Interessats
 expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
 expedient.document.notificar.form.camp.concepte=Concepte
+expedient.document.notificar.form.camp.descripcio=Descripció
+expedient.document.notificar.form.camp.dataprogramada=Data programada
+expedient.document.notificar.form.camp.datacaducitat=Data caducitat
+expedient.document.notificar.form.camp.retard=Retard
 expedient.document.notificar.form.camp.grupCodi=Grup codi
 expedient.document.notificar.form.camp.serveiTipus=Servei tipus
 expedient.document.notificar.form.camp.entregaPostalActiva=Entrega postal activa
@@ -252,6 +276,11 @@ expedient.document.notificar.form.camp.entregaPostalLinea2=Linea2
 expedient.document.notificar.form.camp.entregaPostalCie=Cie
 expedient.document.notificar.form.camp.entregaPostalFormatSobre=Format sobre
 expedient.document.notificar.form.camp.entregaPostalFormatFulla=Format fulla
+
+notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
+notificacio.form.camp.data.caducitat.comment=Si no s'indica cap valor s'agafaran els dies de caducitat per defecte definits
+notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
+
 
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
