#1347: Revisar integració Helium - Notib
Task-Url: https://github.com/GovernIB/helium/issues/1347

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -278,9 +278,10 @@ expedient.document.notificar.form.camp.entregaPostalFormatSobre=Format sobre
 expedient.document.notificar.form.camp.entregaPostalFormatFulla=Format fulla
 
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
-notificacio.form.camp.data.caducitat.comment=Si no s'indica cap valor s'agafaran els dies de caducitat per defecte definits
+notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament. A la data de caducitat se li sumaran els dies definits dins del NOTIB pel procediment
 notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
 
+expedient.document.notificar.validacio.no.notificable=Per restriccions del NOTIB només es poden notificar documents de tipus .ZIP o convertibles a PDF ({0})
 
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
