#1354 Errors trobats en la integració Helium-Notib
Task-Url: https://github.com/GovernIB/helium/issues/1354

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -169,6 +169,48 @@ notifica.entregaPostal.via.tipus.enum.POLIGONO=Poligono
 notifica.entregaPostal.via.tipus.enum.OTROS=Otros
 
 
+notificacio.etst.enum.PENDENT=Pendent
+notificacio.etst.enum.ENVIADA=Enviada
+notificacio.etst.enum.REGISTRADA=Registrada
+notificacio.etst.enum.FINALITZADA=Finalitzada
+notificacio.etst.enum.PROCESSADA=Processada
+
+notificacio.etst.enum.PENDENT.info=Pendent d'enviament a Notifica.
+notificacio.etst.enum.ENVIADA.info=Enviada a Notifica.
+notificacio.etst.enum.REGISTRADA.info=Enviada al registre.
+notificacio.etst.enum.FINALITZADA.info=Estat final de la notificació.
+notificacio.etst.enum.PROCESSADA.info=Marcada com a processada
+
+
+notificacio.enviament.estat.enum.REGISTRADA=Registrada
+notificacio.enviament.estat.enum.ENVIADA=Enviada
+notificacio.enviament.estat.enum.FINALITZADA=Finalitzat
+notificacio.enviament.estat.enum.PROCESSADA=Processat
+notificacio.enviament.estat.enum.NOTIB_PENDENT=Pendent d'enviar
+notificacio.enviament.estat.enum.NOTIB_ENVIADA=Enviada
+notificacio.enviament.estat.enum.ABSENT=Ausente
+notificacio.enviament.estat.enum.ADRESA_INCORRECTA=Dirección incorrecta
+notificacio.enviament.estat.enum.DESCONEGUT=Desconocido
+notificacio.enviament.estat.enum.ENVIADA_CI=Enviado al centro de impresión
+notificacio.enviament.estat.enum.ENVIADA_DEH=Enviado a la DEH
+notificacio.enviament.estat.enum.ENVIAMENT_PROGRAMAT=Envío programado
+notificacio.enviament.estat.enum.ENTREGADA_OP=Entregado al Operador Postal
+notificacio.enviament.estat.enum.ERROR_ENTREGA=Error en el envío
+notificacio.enviament.estat.enum.EXPIRADA=Expirada
+notificacio.enviament.estat.enum.EXTRAVIADA=Extraviada
+notificacio.enviament.estat.enum.LLEGIDA=Leida
+notificacio.enviament.estat.enum.MORT=Fallecido
+notificacio.enviament.estat.enum.NOTIFICADA=Notificada
+notificacio.enviament.estat.enum.PENDENT=Pendent
+notificacio.enviament.estat.enum.PENDENT_ENVIAMENT=Pendiente de envío
+notificacio.enviament.estat.enum.PENDENT_SEU=Pendiente de Comparecencia
+notificacio.enviament.estat.enum.PENDENT_CIE=Pendiente de entrega a CIE
+notificacio.enviament.estat.enum.PENDENT_DEH=Pendiente de entrega a DEH
+notificacio.enviament.estat.enum.REBUTJADA=Rehusada
+notificacio.enviament.estat.enum.SENSE_INFORMACIO=Sin información
+notificacio.enviament.estat.enum.ANULADA=Notificación incorrecta o errónea
+
+
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
@@ -245,6 +287,14 @@ expedient.document.form.camp.firma=Arxiu amb la firma
 
 expedient.document.notificar.form.camp.interessats.variable=Interessats
 expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
+expedient.document.notificar.form.camp.destinatari=Destinatari
+expedient.document.notificar.form.camp.destinatari.placeholder=Escolliu l'interessat destinatari
+expedient.document.notificar.form.camp.titulars=Titulars
+expedient.document.notificar.form.camp.titulars.placeholder=Escolliu els interessats titulars
+expedient.document.notificar.form.camp.titulars.info=Per cada titular s'enviarà una notificació
+expedient.document.notificar.form.camp.representant=Representant
+expedient.document.notificar.form.camp.representant.info=Podeu escollir un representant comú per cada interessat i s'afegirà com a destinatari de la notificació
+expedient.document.notificar.form.camp.representant.placeholder=Podeu escollir un interessat com a representant destinatari de la notificació
 expedient.document.notificar.form.camp.concepte=Concepte
 expedient.document.notificar.form.camp.descripcio=Descripció
 expedient.document.notificar.form.camp.dataprogramada=Data programada
@@ -490,6 +540,55 @@ expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
 
 expedient.notificacio.expedient.cap=Aquest expedient no conté cap notificació
+
+expedient.notificacio=Notificació
+expedient.notificacio.expedient=Notificació de l'expedient
+expedient.notificacio.error=Error de la notificacio 
+expedient.notificacio.unitat_administrativa=Unitat Administrativa
+expedient.notificacio.organ_codi=Òrgan codi
+expedient.notificacio.oficina_codi=Oficina codi
+expedient.notificacio.avis_titol=Avís títol
+expedient.notificacio.avis_text=Avís text
+expedient.notificacio.avis_text_sms=Avís text SMS
+expedient.notificacio.ofici_titol=Ofici títol
+expedient.notificacio.ofici_text=Ofici text
+expedient.notificacio.notificacions=Notificacions
+expedient.notificacio.data_enviament=Data enviament
+expedient.notificacio.data_recepcio=Data recepció
+expedient.notificacio.registre_num=Número registre
+expedient.notificacio.assumpte=Assumpte
+expedient.notificacio.estat=Estat
+expedient.notificacio.estat.notificacio=Estat notificació
+expedient.notificacio.estat.enviament=Estat enviament
+expedient.notificacio.interessat=Interessat
+expedient.notificacio.document=Document
+expedient.notificacio.justificant=Justificant
+expedient.notificacio.info=Informació notificació
+expedient.notificacio.descarregar.doc=Descarregar document
+expedient.notificacio.interessat.document_num=Número document
+expedient.notificacio.interessat.nom_llinatges=Nom i llinatges
+expedient.notificacio.interessat.email=Email
+expedient.notificacio.interessat.pais=País
+expedient.notificacio.interessat.provincia=Provincia
+expedient.notificacio.interessat.municipi=Municipi
+expedient.notificacio.document_annexos=Documents i annexos
+expedient.notificacio.dades_generals=Dades generals
+expedient.notificacio.estat.enviat=ENVIAT
+expedient.notificacio.estat.registrat=REGISTRAT
+expedient.notificacio.estat.finalitzat=FINALITZAT
+expedient.notificacio.estat.processat_ok=PROCESSAT
+expedient.notificacio.estat.processat_rebutjat=REBUTJAT
+expedient.notificacio.estat.processat_error=ERROR PROCESSANT
+expedient.notificacio.estat.pendent=PENDENT
+expedient.notificacio.estat.rebutjat=REBUTJAT
+expedient.notificacio.estat.cancelat=CANCEL.LAT
+expedient.notificacio.mostrar_error=Mostrar error
+expedient.notificacio.tornar_processar=Tornar a processar
+expedient.notificacio.reprocessada=S'ha tornat a demanar el justificant
+expedient.notificacio.concepte=Concepte
+expedient.notificacio.titular=Titular
+expedient.notificacio.destinatari=Representant
+
 
 expedient.tasca.columna.tasca=Tasca
 expedient.tasca.columna.tasca.activa=Tasca activa
