--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -143,50 +143,6 @@ expedient.termini.modificar.tipus=Tipus de modificació
 expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
 
-expedient.notificacio=Notificació
-expedient.notificacio.expedient=Notificació de l'expedient
-expedient.notificacio.error=Error de la notificacio 
-expedient.notificacio.unitat_administrativa=Unitat Administrativa
-expedient.notificacio.organ_codi=Òrgan codi
-expedient.notificacio.oficina_codi=Oficina codi
-expedient.notificacio.avis_titol=Avís títol
-expedient.notificacio.avis_text=Avís text
-expedient.notificacio.avis_text_sms=Avís text SMS
-expedient.notificacio.ofici_titol=Ofici títol
-expedient.notificacio.ofici_text=Ofici text
-expedient.notificacio.notificacions=Notificacions
-expedient.notificacio.data_enviament=Data enviament
-expedient.notificacio.data_recepcio=Data recepció
-expedient.notificacio.registre_num=Número registre
-expedient.notificacio.assumpte=Assumpte
-expedient.notificacio.estat=Estat
-expedient.notificacio.interessat=Interessat
-expedient.notificacio.document=Document
-expedient.notificacio.justificant=Justificant
-expedient.notificacio.info=Informació notificació
-expedient.notificacio.descarregar.doc=Descarregar document
-expedient.notificacio.interessat.document_num=Número document
-expedient.notificacio.interessat.nom_llinatges=Nom i llinatges
-expedient.notificacio.interessat.email=Email
-expedient.notificacio.interessat.pais=País
-expedient.notificacio.interessat.provincia=Provincia
-expedient.notificacio.interessat.municipi=Municipi
-expedient.notificacio.document_annexos=Documents i annexos
-expedient.notificacio.dades_generals=Dades generals
-expedient.notificacio.estat.enviat=ENVIAT
-expedient.notificacio.estat.processat_ok=PROCESSAT
-expedient.notificacio.estat.processat_rebutjat=REBUTJAT
-expedient.notificacio.estat.processat_error=ERROR PROCESSANT
-expedient.notificacio.estat.pendent=PENDENT
-expedient.notificacio.estat.rebutjat=REBUTJAT
-expedient.notificacio.estat.cancelat=CANCEL.LAT
-expedient.notificacio.mostrar_error=Mostrar error
-expedient.notificacio.tornar_processar=Tornar a processar
-expedient.notificacio.reprocessada=S'ha tornat a demanar el justificant
-expedient.notificacio.concepte=Concepte
-expedient.notificacio.titular=Titular
-expedient.notificacio.destinatari=Representant
-
 expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per finalitzada?
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
@@ -632,8 +588,8 @@ info.document.adjuntats=Els documents s'han adjuntat correctament
 info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
-info.document.notificat=El document s'ha notificat correctament
-info.document.notificar.avis=El document s'ha notificat amb errors: {0}
+info.document.notificat=La notificació del document s''ha enviat correctament a l''interessat "{0}"
+info.document.notificar.avis=La notificació del document s''ha enviat amb errors per l''interessat "{0}": {1}
 info.document.notificar.error=S''ha produït un error notificant el document: {0}
 info.document.guardat=El document s'ha guardat correctament
 info.document.guardat.error=S''ha produit un error guardant el document: {0}
