#1358 Proves i correccions Helium v. 3.2.108 entorn PRE
- Correcció text estat notificacions i literals nom i dni de les
notificacions de documents.
- Rectificació tasca Error amb les validacions de variables #1349.
- Alerta "Error AJAX:" quan els dominis externs fallen, es posa un
missatge d'error a la consola del navegador.

Task url: https://github.com/GovernIB/helium/issues/1358

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -82,8 +82,8 @@ interessat.form.titol.modificar=Modificar interessat
 
 interessat.form.camp.codi=Codi
 interessat.form.camp.codipostal=Codi postal
-interessat.form.camp.nom=Nom
-interessat.form.camp.nif=Nif
+interessat.form.camp.nom=Nom / Raó social
+interessat.form.camp.nif=NIF/CIF/DNI/Codi DIR3
 interessat.form.camp.llinatge1=Llinatge1
 interessat.form.camp.llinatge2=Llinatge2
 interessat.form.camp.tipus=Tipus
@@ -188,27 +188,27 @@ notificacio.enviament.estat.enum.FINALITZADA=Finalitzat
 notificacio.enviament.estat.enum.PROCESSADA=Processat
 notificacio.enviament.estat.enum.NOTIB_PENDENT=Pendent d'enviar
 notificacio.enviament.estat.enum.NOTIB_ENVIADA=Enviada
-notificacio.enviament.estat.enum.ABSENT=Ausente
-notificacio.enviament.estat.enum.ADRESA_INCORRECTA=Dirección incorrecta
-notificacio.enviament.estat.enum.DESCONEGUT=Desconocido
-notificacio.enviament.estat.enum.ENVIADA_CI=Enviado al centro de impresión
-notificacio.enviament.estat.enum.ENVIADA_DEH=Enviado a la DEH
-notificacio.enviament.estat.enum.ENVIAMENT_PROGRAMAT=Envío programado
-notificacio.enviament.estat.enum.ENTREGADA_OP=Entregado al Operador Postal
-notificacio.enviament.estat.enum.ERROR_ENTREGA=Error en el envío
+notificacio.enviament.estat.enum.ABSENT=Absent
+notificacio.enviament.estat.enum.ADRESA_INCORRECTA=Direcció incorrecta
+notificacio.enviament.estat.enum.DESCONEGUT=Desconegut
+notificacio.enviament.estat.enum.ENVIADA_CI=Enviat al centre d'impresisó
+notificacio.enviament.estat.enum.ENVIADA_DEH=Enviat a la DEH
+notificacio.enviament.estat.enum.ENVIAMENT_PROGRAMAT=Enviament programat
+notificacio.enviament.estat.enum.ENTREGADA_OP=Entregat a l'Operador Postal
+notificacio.enviament.estat.enum.ERROR_ENTREGA=Error a l'Enviament
 notificacio.enviament.estat.enum.EXPIRADA=Expirada
 notificacio.enviament.estat.enum.EXTRAVIADA=Extraviada
-notificacio.enviament.estat.enum.LLEGIDA=Leida
-notificacio.enviament.estat.enum.MORT=Fallecido
+notificacio.enviament.estat.enum.LLEGIDA=Llegida
+notificacio.enviament.estat.enum.MORT=Difunt
 notificacio.enviament.estat.enum.NOTIFICADA=Notificada
 notificacio.enviament.estat.enum.PENDENT=Pendent
-notificacio.enviament.estat.enum.PENDENT_ENVIAMENT=Pendiente de envío
-notificacio.enviament.estat.enum.PENDENT_SEU=Pendiente de Comparecencia
-notificacio.enviament.estat.enum.PENDENT_CIE=Pendiente de entrega a CIE
-notificacio.enviament.estat.enum.PENDENT_DEH=Pendiente de entrega a DEH
-notificacio.enviament.estat.enum.REBUTJADA=Rehusada
-notificacio.enviament.estat.enum.SENSE_INFORMACIO=Sin información
-notificacio.enviament.estat.enum.ANULADA=Notificación incorrecta o errónea
+notificacio.enviament.estat.enum.PENDENT_ENVIAMENT=Pendent d'Enviament
+notificacio.enviament.estat.enum.PENDENT_SEU=Pendent de Compareixença
+notificacio.enviament.estat.enum.PENDENT_CIE=Pendent d'entrega a CIE
+notificacio.enviament.estat.enum.PENDENT_DEH=Pendent d'entrega a DEH
+notificacio.enviament.estat.enum.REBUTJADA=Rebutjada
+notificacio.enviament.estat.enum.SENSE_INFORMACIO=Sense informació
+notificacio.enviament.estat.enum.ANULADA=Notificació incorrecta o errònia
 
 
 alerta.llistat.marcar_com_llegida=Marcar llegida
