#1358 Proves i correccions Helium v. 3.2.108 entorn PRE
- Correcció d'errors quan el titular o destinatari és una Administració.
- Afegir tipus d'enviament
- Nou estat notib clien ws 1.1 enviat_sir
- Afegir el codi dir3 als interessats
- Anotacions a administracions passant el nif
- Correccions per interessats jurídics


Task url: https://github.com/GovernIB/helium/issues/1358

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -63,6 +63,7 @@ interessat.llistat.titol=Interessat
 interessat.llistat.columna.codi=Codi
 interessat.llistat.columna.nom=Nom
 interessat.llistat.columna.nif=Nif
+interessat.llistat.columna.dir3Codi=Codi DIR3
 interessat.llistat.columna.llinatge1=Llinatge1
 interessat.llistat.columna.llinatge2=Llinatge2
 interessat.llistat.columna.tipus=Tipus
@@ -83,7 +84,8 @@ interessat.form.titol.modificar=Modificar interessat
 interessat.form.camp.codi=Codi
 interessat.form.camp.codipostal=Codi postal
 interessat.form.camp.nom=Nom / Raó social
-interessat.form.camp.nif=NIF/CIF/DNI/Codi DIR3
+interessat.form.camp.nif=NIF/CIF/DNI
+interessat.form.camp.dir3codi=Codi DIR3
 interessat.form.camp.llinatge1=Llinatge1
 interessat.form.camp.llinatge2=Llinatge2
 interessat.form.camp.tipus=Tipus
@@ -114,10 +116,15 @@ domiciliconcret.tipus.enum.APARTAT_CORREUS=Apartat correus
 domiciliconcret.tipus.enum.SENSE_NORMALITZAR=Sense normalitzar
 
 interessat.validacio.codi.repetit=Aquest codi ja existeix
+interessat.validacio.nif.obligatori=El NIF/CIF/DNI és obligatori per interessats físics o jurídics
+interessat.validacio.dir3Codi.obligatori=El codi DIR3 és obligatori per interessats de tipus Administració
 interessat.validacio.llinatge.obligatori=Si el tipus de persona és física llavors el llinatge es obligatori
 
 notifica.servei.tipus.enum.NORMAL=Normal
 notifica.servei.tipus.enum.URGENT=Urgent
+
+notifica.enviament.tipus.enum.NOTIFICACIO=Notificació
+notifica.enviament.tipus.enum.COMUNICACIO=Comunicació
 
 notifica.entregaPostal.tipus.enum.NACIONAL=Nacional
 notifica.entregaPostal.enum.ESTRANGER=Estanger
@@ -209,6 +216,7 @@ notificacio.enviament.estat.enum.PENDENT_DEH=Pendent d'entrega a DEH
 notificacio.enviament.estat.enum.REBUTJADA=Rebutjada
 notificacio.enviament.estat.enum.SENSE_INFORMACIO=Sense informació
 notificacio.enviament.estat.enum.ANULADA=Notificació incorrecta o errònia
+notificacio.enviament.estat.enum.ENVIAT_SIR=Enviada
 
 
 alerta.llistat.marcar_com_llegida=Marcar llegida
@@ -297,6 +305,7 @@ expedient.document.notificar.form.camp.representant.info=Podeu escollir un repre
 expedient.document.notificar.form.camp.representant.placeholder=Podeu escollir un interessat com a representant destinatari de la notificació
 expedient.document.notificar.form.camp.concepte=Concepte
 expedient.document.notificar.form.camp.descripcio=Descripció
+expedient.document.notificar.form.camp.enviamentTipus=Tipus enviament
 expedient.document.notificar.form.camp.dataprogramada=Data programada
 expedient.document.notificar.form.camp.datacaducitat=Data caducitat
 expedient.document.notificar.form.camp.retard=Retard
@@ -554,6 +563,7 @@ expedient.notificacio.ofici_titol=Ofici títol
 expedient.notificacio.ofici_text=Ofici text
 expedient.notificacio.notificacions=Notificacions
 expedient.notificacio.data_enviament=Data enviament
+expedient.notificacio.enviamentTipus=Tip. enviament
 expedient.notificacio.data_recepcio=Data recepció
 expedient.notificacio.registre_num=Número registre
 expedient.notificacio.assumpte=Assumpte
