--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -588,9 +588,10 @@ info.document.adjuntats=Els documents s'han adjuntat correctament
 info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
-info.document.notificat=La notificació del document s''ha enviat correctament a l''interessat "{0}"
-info.document.notificar.avis=La notificació del document s''ha enviat amb errors per l''interessat "{0}": {1}
-info.document.notificar.error=S''ha produït un error notificant el document: {0}
+info.document.notificat=La notificació/comunicació del document s''ha enviat correctament a l''interessat "{0}"
+info.document.notificar.avis=La notificació/comunicació del document s''ha enviat amb errors per l''interessat "{0}": {1}
+info.document.notificar.error=S''ha produït un error notificant/comunicant el document: {0}
+
 info.document.guardat=El document s'ha guardat correctament
 info.document.guardat.error=S''ha produit un error guardant el document: {0}
 info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
