#1358 Proves i correccions Helium v. 3.2.108 entorn PRE
- Tornar a posar el nif dels interessats a not null.
- Errors per valors nulls en els handlers d'interessats i d'alta de
notificació.
- Error reordenant camps de tasques des del menú de disseny de
definicions de procés per identificador del tipus d'expedient null.
- Conversió a PDF des del handler d'alta de notificació
- Evitar errors Arxiu esborrant o modificant document notificat
- Control dels errors retornats pel NOTIB
- Botó per forçar la consulta de l'estat per evitar errors en les
consultes


Task url: https://github.com/GovernIB/helium/issues/1358

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -116,9 +116,8 @@ domiciliconcret.tipus.enum.APARTAT_CORREUS=Apartat correus
 domiciliconcret.tipus.enum.SENSE_NORMALITZAR=Sense normalitzar
 
 interessat.validacio.codi.repetit=Aquest codi ja existeix
-interessat.validacio.nif.obligatori=El NIF/CIF/DNI és obligatori per interessats físics o jurídics
 interessat.validacio.dir3Codi.obligatori=El codi DIR3 és obligatori per interessats de tipus Administració
-interessat.validacio.llinatge.obligatori=Si el tipus de persona és física llavors el llinatge es obligatori
+interessat.validacio.llinatge.obligatori=Si el tipus de persona és física llavors el llinatge és obligatori
 
 notifica.servei.tipus.enum.NORMAL=Normal
 notifica.servei.tipus.enum.URGENT=Urgent
@@ -549,6 +548,11 @@ expedient.log.expedient.cap=Aquest expedient no conté cap log
 expedient.log.proces.cap=Aquest proces no conté cap log
 
 expedient.notificacio.expedient.cap=Aquest expedient no conté cap notificació
+
+expedient.notificacio.consultar.estat.info=Consultar estat al NOTIB
+expedient.notificacio.consultar.estat.not.found=La notificació amb id {0} no pertany a l''expedient
+expedient.notificacio.consultar.estat.success=L'estat s'ha consultat correctament al NOTIB
+expedient.notificacio.consultar.estat.error=Error consultant l''estat de l''enviament al NOTIB: {0}
 
 expedient.notificacio=Notificació
 expedient.notificacio.expedient=Notificació de l'expedient
